# rocket-example

./: .env  Cargo.toml  requests.org
data/: db.sql  users.db
src/: hello.rs  main.rs
