[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
rgb = { version = "0.8.34", features = ["serde"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.152"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite"] }
